# xs

./: .dockerignore  .env.example  .gitignore  AUDIT_PAGINAS_EXISTENTES.md  BILLING_SYSTEM_README.md  BUILD_FIXES_NEEDED.md  CAMINHO_PARA_100_COMPLETO.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETE_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_ENDPOINT_TEST_REPORT.md  COMPREHENSIVE_FINAL_REPORT.md  CONTRIBUTING.md  CORRECOES_LINKS_COMPLETAS.md  CORRECTIONS_SUMMARY.md  DEMO_READY.md  DEPLOYMENT_GUIDE.md  DESIGN_FIX_RESEND_LINEAR.md  DOCS.md  DOCS_CLEANUP_ANALYSIS.md  DOCUMENTATION_COMPLETE.md  DOCUMENTO_FINAL_COMPLETO_TUDO.md  Dockerfile  Dockerfile.optimized  ENDPOINT_TEST_REPORT.md  ENDPOINT_TEST_SUMMARY.md  ENTERPRISE_ANALYSIS.md  EVIDENCE_BUNDLES_RBAC_STORAGE.md  EXECUCAO_100_COMPLETA.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_FINAL.md  EXECUTIVE_SUMMARY_SPRINT_2.md  EXTENDED_SESSION_SUMMARY.md  FASE_1_MVP_PROGRESS_REPORT.md  FINAL_CLEANUP_SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  (+139 more)
.archive/: AUTH_FIX_PLAN.md  AUTH_STATUS.md  CRITICAL_ANALYSIS.md  DIAGNOSTICO_COMPLETO_KMS.md  FINAL_CLEANUP_RESEND.md  IMPLEMENTATION_PHASE1.md  POST_UPDATE_STATUS.md  PRICING_MIGRATION_STATUS.md  README.md  XASE_README.md  (+3 more)
sidecar/: CLINICAL_DATA_GOVERNANCE_IMPLEMENTATION.md  Cargo.toml  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  PRODUCTION_READY_GUIDE.md  README.md  USAGE_EXAMPLES.md  test_all_pipelines.sh  test_quick.sh
sidecar/benches/: throughput.rs
sidecar/src/: audio_advanced.rs  audio_redaction.rs  cache.rs  clinical_nlp.rs  config.rs  data_provider.rs  deidentify_dicom.rs  deidentify_text.rs  dicom_advanced.rs  fhir_advanced.rs  lib.rs  main.rs  metadata_store.rs  metrics.rs  network_resilience.rs  ocr_scrubber.rs  pipeline.rs  prefetch.rs  redis_client.rs  requester_pays.rs  s3_client.rs  shuffle_buffer.rs  socket_server.rs  task_queue.rs  telemetry.rs  watermark.rs  watermark.rs.test
sidecar/src/auth/: jwt.rs  mod.rs  token_refresher.rs
sidecar/src/observability/: mod.rs  prometheus.rs
sidecar/src/providers/: dicomweb_provider.rs  fhir_provider.rs  hybrid_provider.rs  mod.rs  s3_provider.rs
sidecar/src/resilience/: cache_only_mode.rs  mod.rs
sidecar/tests/: advanced_pipeline_tests.rs  e2e_governance.rs  integration_tests.rs  pipeline_tests.rs  watermark_production_report.rs  watermark_robustness.rs
sidecar/tests/fixtures/: sample_fhir.json  sample_hl7.txt
(+2116 files in other folders)
