[package]
name = "xase-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
aws-sdk-s3 = "1.12"
aws-config = "1.1"
lru = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rustfft = "6.1"
hound = "3.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.7"
