[package]
name = "xase-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
hyper = { version = "1.1", features = ["full"] }
aws-sdk-s3 = "1.12"
aws-config = "1.1"
lru = "0.12"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rustfft = "6.1"
hound = "3.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
regex = "1"
async-trait = "0.1"
prometheus = "0.13"
axum = "0.7"
lazy_static = "1.4"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
# Audio processing
rubato = "0.5"  # pitch shifting
pyannote-rs = { version = "0.1", optional = true }  # diarization
whisper-rs = { version = "0.1", optional = true }  # transcription for redaction
# Image processing
image = "0.24"
tesseract = { version = "0.14", optional = true }  # OCR
nifti = { version = "0.2", optional = true }  # NIfTI medical imaging
# NLP and text processing
rust-bert = { version = "0.21", optional = true }  # NER for medical entities
chrono-tz = "0.8"  # date shifting

[features]
default = []
dicom = ["dicom-object", "dicom-core"]
dicom-full = ["dicom", "tesseract", "nifti"]  # Full DICOM with OCR and NIfTI
audio-full = ["pyannote-rs", "whisper-rs"]  # Full audio with diarization
nlp-full = ["rust-bert"]  # Full NLP for medical text

[dependencies.dicom-object]
version = "0.6"
optional = true

[dependencies.dicom-core]
version = "0.6"
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.7"
tempfile = "3.8"
